--- a/M2/bhaas3.gradle
+++ b/M2/bhaas3.gradle
@@ -8,8 +8,8 @@ version = '1.0'
 jar {
     manifest {
         attributes  'Implementation-Title' : 'Gradle Quickstart' ,
-                    'Implementation-Version' : version,
-                    'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain', 'Class-Path': '../../lib/resources.jar'
+                'Implementation-Version' : version,
+                'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain', 'Class-Path': '../../lib/resources.jar'
     }
 }
 
@@ -17,3 +17,6 @@ dependencies {
     compile files ('lib/resources.jar')
 }
 
+repositories {
+    mavenCentral()
+}
